# goopinator

./: .gitignore  Cargo.toml  LICENSE  POC_STATUS.md  QUICKSTART.md  README.md  goopinator_layer.json  install.sh  uninstall.sh
src/: lib.rs
